Attempted to fix video not showing up on IOS. Didn't work. Wont fix.

--- a/css/global.css
+++ b/css/global.css
@@ -217,9 +217,9 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: 0;
   filter: brightness(50%);
   transition: filter 0.3s ease;
+  background-color: #000;
 }
 
 .misc-section:hover .misc-section-media {
